[tool.poetry]
name = "repl_nix_autos-rest-api"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
SQLAlchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
coverage = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
